# haskell-extraction

./: .gitignore  .merlin  Make  Makefile  OUT.hs  README  _CoqProject
haskell/: haskell-of-coq.cabal  stack.yaml
haskell/src/: Coq.hs  Emit.hs  Extraction.hs  HS.hs  Main.hs  Rename.hs  Telescope.hs
haskell/src/Coq/: Parse.hs
haskell/src/Data/: Nat.hs  Sexp.hs
haskell/src/Language/Haskell/Exts/: Pretty.hs  Syntax.hs
ocaml/: haskell_extraction.ml4  haskell_extraction_plugin.mllib  hextraction.ml  hutil.ml
src/: common.ml  haskell_extraction.ml4  haskell_extraction_plugin.mllib  hextraction.ml  hextraction.mli  hutil.ml  minihs.ml  minihs.mli
test-suite/: Test.v
theories/: HaskellExtraction.v
